--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.5.2",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
+    "axios": "^1.7.7",
+    "next": "14.2.11",
+    "openai": "^4.14.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^3.9.4",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1"
   }
 }
